--- a/toc.yaml
+++ b/toc.yaml
@@ -343,6 +343,13 @@ toc:
                         topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-nw-db2-rhel-overview.md
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-nw-db2-rhel-deploy.md
+                - topicgroup:
+                    label: SAP NetWeaver with ASE Sybase
+                    topics:
+                      - navtitle: Overview
+                        topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-nw-ase-sybase-overview.md
+                      - navtitle: Deploying
+                        topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-nw-ase-sybase-deploy.md
           - topicgroup:
               label: High availability scenarios on Power Virtual Server
               topics:
